--- a/Tracking/热云监测链接获取指南.md
+++ b/Tracking/热云监测链接获取指南.md
@@ -1,5 +1,5 @@
 
-#### 1.	产品调试完成后，进入热云后台，在“已调试产品”tab栏中选中需要推广的产品，进入该产品的数据总览页面。
+#### 1.	产品调试完成后，进入热云后台，在“已调试产品”中选中需要推广的产品，进入该产品的数据总览页面。
 ![image](imgs/005热云_选择产品.png)
 
 #### 2.	点击左侧菜单栏中的“配置”，选择“推广活动管理”。
