--- a/广告主帮助文档.md
+++ b/广告主帮助文档.md
@@ -10,17 +10,16 @@
 5. 财务管理
 
 ### 1 说明
+
 广告主进入系统后，建议的操作路径为：
 
-第1步: 添加应用（请参考2.1及2.2的介绍）
+第1步: 添加应用与素材（请参考2.1及2.5的介绍）
 
-第2步: 上传素材（请参考2.4及2.5的介绍）
+第2步: 添加广告（请参考2.6及2.8的介绍）
 
-第3步: 添加广告（请参考2.6及2.7的介绍）
+第3步: 充值（请参考3的介绍）
 
-第4步: 充值（请参考3的介绍）
-
-提醒：第1步到第3步是有前后顺序的，必须先添加应用，再上传素材，然后添加广告。充值可以在此之前或者之后完成。
+提醒：第1步到第2步是有前后顺序的，必须先添加应用与素材，再添加广告。充值可以在此之前或者之后完成。
 
 ### 2 添加应用及广告投放
 
@@ -28,9 +27,11 @@
 
 ![001](adimgscn/001.png)
 
-##### 2.2 填写相关信息后，点击“仅添加”，回到应用管理页面；或点击“添加并创建素材”，进入添加素材页面（添加素材详见步骤2.5）
+##### 2.2 进入添加应用页面，该页面有两部分，第一部分是应用信息，第二部分是应用元素及推广素材。
 
-![002](adimgscn/014.png)
+![002](adimgscn/第一部分信息.png)
+
+应用信息部分均为必填项。
 
 - 应用分类：请准确填写应用所属类别，便于我们对广告投放效果进行优化
 - 应用名称：请填写真实的应用名称，如“消灭星星-Popstar官方正版”
@@ -38,22 +39,29 @@
 - 应用包名：请输入应用主包名，该包名是应用的唯一识别。如“com.zplay.popstar”
 - 下载地址：对于iOS应用请填写规范的iTunes地址，便于可以正常解析出应用下载页面
 
+![002](adimgscn/第二部分信息.png)
 
-##### 2.3 找到创建的应用，点击应用名称，进入应用广告投放及广告素材管理页面
+应用元素及推广素材为选填。您可以上传和自己游戏相关的素材，以便我们更好地为您制作可玩的广告创意。上传素材有两种途径，第一，直接上传，适用于较小的文件。第二，填写网盘地址，适用于文件数量较多，大小较大的情况。您的素材将被上传到应用素材库。（关于素材库，详见x.x）
 
-![003](adimgscn/003.png)
+两部分信息填写完成后，选择仅添加，即可上传文件并保存您填写的应用信息。选择添加并创建广告，即可上传文件，保存您填写的应用信息，并进入到创建广告投放页面（创建广告投放详见步骤x.x）。
 
-##### 2.4 页面中选择右侧“广告素材”进入素材管理页面。点击“添加素材”为您的应用添加可玩素材
+##### 2.3 您有两个途径可以进入应用的素材库。第一，进入“应用管理”页面，在应用列表右侧找到“素材库”按钮，进入该应用下的素材库。第二，进入“应用管理”页面，点击应用名称，进入应用的广告投放页面，点击右上方的“素材库”，进入该应用下的素材库。
 
-![004](adimgscn/004.png)
+![003](adimgscn/进入应用素材库的两个方式.png)
 
-##### 2.5 上传相关素材，上传完成后，点击“仅添加”，跳转至广告素材列表页；点击“添加素材并创建广告”，进入创建广告投放页面（创建广告投放详见步骤2.6）。此时素材已经处于制作中状态，制作完成后可以在广告投放列表中预览（详见步骤1.8-1.9）
+##### 2.4 素材库页面。
 
-![005](adimgscn/015.png)
+![004](adimgscn/应用素材库页面.png)
 
-- 素材名称：请填写素材名称，便于分辨不同素材
-- 落地页：可玩广告展示完成后展示的图片，图片支持PNG、JPG，720*800/800*720，大小不得超过300K。
-- 音频文件：可玩广告展示过程中背景音乐。音频文件仅支持MP3格式，大小不得超过1M，音频文件最短30s。
+在素材库里，你可以看到已经上传的文件与链接。点击“删除”，可删除这些文件与链接，点击“添加网盘/本地文件”，可添加文件，添加方法同2.2。对文件进行更改后，点击“保存”，保存更改。
+
+##### 2.5 上传应用元素及推广素材后，我们会将这些元素制作成可玩素材。您可以在可玩素材列表页预览这些素材。点击应用管理-应用名称-可玩素材，即可进入可玩素材列表页
+
+![005](adimgscn/可玩素材列表页-二维码红圈标出.png)
+
+在可玩素材列表页，鼠标悬浮到预览按钮上方，出现二维码。
+- 若您的手机中已经安装ZPLAY Ads预览工具，可扫描右方二维码预览广告。
+- 若您手机中未安装ZPLAY Ads预览工具，则可扫描左方较小的二维码下载ZPLAY Ads预览工具，然后打开该工具，扫描右方的二维码进行预览。
 
 ##### 2.6 点击左侧“广告投放”标签进入广告投放管理页面，点击“添加广告”为您的应用添加广告投放
 
@@ -65,21 +73,12 @@
 
 - 结算设置：目前我们只支持CPI的结算方式。使用账户预算时，我们会将您现在的账户余额作为您一天的投放预算。如果不使用账户预算，您也可以自行设置投放预算，投放预算以天为单位。
 - 时间设置：投放结束时间视您需要选择添加。若没有添加结束时间，广告投放在投放预算或账户余额消耗完时停止。
-- 素材设置：选择您已创建的素材。若还未创建素材，您需先创建素材。
 - 定向设置：您可以根据自己的投放需求设置投放定向。
-- 展示监测：展示监测目前仅支持Appsflyer展示监测，展示监测数据您可以在Appaflyer查看。
-- 监测地址：填入点击监测地址，若您已经对接 AdMaster、Talking Data、AppsFlyer、Adjust、热云等三方监测平台，填写在对方平台生成的监测地址，若您未接入以上五家监测平台，您可以通过我们提供的激活回传接口，点击“接入说明”查看接口文档。
+- 展示监测/监测地址：填入监测地址，若您已经对接Appsflyer、adjust、AdMaster、TaklingData、热云、singular、TUNE等三方监测平台，填写在对方平台生成的监测地址，若您未接入以上八家监测平台，您可以通过我们提供的激活回传接口，点击“接入说明”查看如何获取监测地址。
 
-##### 2.8 广告投放列表中“广告预览”按钮高亮表示素材制作完毕
+##### 2.8 广告创建完成，在广告投放页查看广告的状态。
 
-![007](adimgscn/007.png)
-
-##### 2.9 点击“广告预览”按钮，扫描二维码预览广告
-- 若您的手机中已经安装ZPLAY Ads预览工具，可点击“广告预览”，扫描上方二维码预览广告。
-- 若您手机中未安装ZPLAY Ads预览工具，则可扫描下方二维码下载ZPLAY Ads预览工具，然后扫描上方二维码进行预览。
-
-![008](adimgscn/008.png)
-
+![007](adimgscn/广告投放页的图.png)
 
 ### 3 账户充值
 
