--- a/系统使用手册.md
+++ b/系统使用手册.md
@@ -1,15 +1,15 @@
 ### 目录
-1. 说明
+1. [说明](#1-说明)
 
-2. 添加应用及广告投放
+2. [添加应用及广告投放](#2-添加应用及广告投放)
 
-3. 账户充值
+3. [账户充值](#3-账户充值)
 
-4. 数据查询
+4. [数据查询](#4-数据查询)
 
-5. 财务管理
+5. [财务管理](#5-财务管理)
 
-### 1 说明
+### 1. 说明
 广告主进入系统后，建议的操作路径为：
 
 第1步: 添加应用（请参考2.1及2.2的介绍）
@@ -22,7 +22,7 @@
 
 提醒：第1步到第3步是有前后顺序的，必须先添加应用，再上传素材，然后添加广告。充值可以在此之前或者之后完成。
 
-### 2 添加应用及广告投放
+### 2. 添加应用及广告投放
 
 ##### 2.1 进入“应用管理”页面，点击“添加应用”
 
@@ -81,7 +81,7 @@
 ![008](adimgscn/008.png)
 
 
-### 3 账户充值
+### 3. 账户充值
 
 ##### 3.1 点击首页“充值”按钮开始充值
 
@@ -97,13 +97,13 @@
 
 注：账户余额不为0时，广告投放才可生效
 
-### 4 数据查询
+### 4. 数据查询
 
 进入广告投放报表页查询分应用和分广告投放数据
 
 ![012](adimgscn/012.png)
 
-### 5 财务管理
+### 5. 财务管理
 
 进入财务管理页面查看账户消费信息
 
