广告主中文帮助文档更新

--- a/广告主帮助文档.md
+++ b/广告主帮助文档.md
@@ -13,9 +13,9 @@
 
 广告主进入系统后，建议的操作路径为：
 
-第1步: 添加应用与素材（请参考2.1及2.5的介绍）
+第1步: 添加应用与素材（请参考2.1至2.5的介绍）
 
-第2步: 添加广告（请参考2.6及2.8的介绍）
+第2步: 添加广告（请参考2.6至2.8的介绍）
 
 第3步: 充值（请参考3的介绍）
 
