--- a/广告主帮助文档.md
+++ b/广告主帮助文档.md
@@ -1,13 +1,13 @@
 ### 目录
-1. 说明[#1_说明]
+1. [说明](#1_说明)
 
-2. 添加应用及广告投放[#2-添加应用及广告投放]
+2. [添加应用及广告投放](#2-添加应用及广告投放)
 
-3. 账户充值[#3-账户充值]
+3. [账户充值](#3-账户充值)
 
-4. 数据查询[#4-数据查询]
+4. [数据查询](#4-数据查询)
 
-5. 财务管理[#5-财务管理]
+5. [财务管理](#5-财务管理)
 
 ### 1 说明
 
