--- a/系统使用手册.md
+++ b/系统使用手册.md
@@ -37,6 +37,8 @@
 - 应用包名：请输入应用主包名，该包名是应用的唯一识别。如“com.zplay.popstar”
 - 下载地址：对于iOS应用请填写规范的iTunes地址，便于可以正常解析出应用下载页面
 
+注：如果您的应用已经上线，可以点击“若应用已上线，点击此处更新应用信息”并输入商店URL。输入后，点击“查找”，您的应用信息将被自动补全。
+
 ![002](adimgscn/002.png)
 
 应用元素及推广素材为选填。您可以上传和自己游戏相关的素材，以便我们更好地为您制作可玩的广告创意。上传素材有两种途径，第一，直接上传，适用于较小的文件。第二，填写网盘地址，适用于文件数量较多，大小较大的情况。您的素材将被上传到应用素材库。（关于素材库，详见步骤2.4）
