--- a/系统使用手册.md
+++ b/系统使用手册.md
@@ -1,7 +1,7 @@
-### 目录
+## 目录
 1. [说明](#1-说明)
 
-2. [添加应用及广告投放](#2-添加应用及广告投放)
+2. [应用及广告投放](#2-添加应用及广告投放)
 
 3. [账户充值](#3-账户充值)
 
@@ -9,27 +9,50 @@
 
 5. [财务管理](#5-财务管理)
 
-### 1 说明
+## 1 说明
 
 广告主进入系统后，建议的操作路径为：
 
-第1步: 添加应用与素材（请参考2.1至2.5的介绍）
+第1步: 添加应用（请参考2.1至2.5的介绍）
 
 第2步: 添加广告（请参考2.6至2.8的介绍）
 
 第3步: 充值（请参考3的介绍）
 
-提醒：第1步到第2步是有前后顺序的，必须先添加应用与素材，再添加广告。充值可以在此之前或者之后完成。
+提醒：第1步到第2步是有前后顺序的，必须先添加应用，再添加广告。充值可以在此之前或者之后完成。
 
-### 2 添加应用及广告投放
+## 2 应用及广告投放
 
-##### 2.1 进入“应用管理”页面，点击“添加应用”
+### 2.1 应用管理
+
+#### 2.1.1 应用列表
+
+进入“应用管理”页面，查看应用列表。
+
+列表展示了已添加应用的一些基本信息以及可以对应用进行的操作。
+
+- 点击“编辑”，可编辑应用的基本信息。若您的应用已经通过审核，编辑后，应用将重置为待审核状态。审核通过后，应用下的广告才会投放。
+- 点击“展开广告列表”，跳转到该应用下的广告投放页，可以查看该应用的广告投放信息。（关于广告投放，详见[2.2](#22-广告投放)）
+- 点击“创建投放”，可为该应用创建广告投放。（关于创建投放，详见[2.2](#22-广告投放)）
+- 点击素材库，可进入该应用的素材库。在素材库里，你可以上传与应用相关的推广元素，以便我们为您制作可玩素材。（关于素材库，详见[2.3](#23-应用素材库)）
+
+![001](adimgscn/0001.png)
+
+#### 2.1.2 添加应用
+
+在应用管理页面，点击“添加应用”，进入添加应用的界面。
 
 ![001](adimgscn/001.png)
 
-##### 2.2 进入添加应用页面，该页面有两部分，第一部分是应用信息，第二部分是应用元素及推广素材。
+该页面有两部分，第一部分是应用信息，该部分为必填项。第二部分是应用元素及推广素材，该部分为选填项。
 
-应用信息部分均为必填项。
+（1）应用信息，该部分未必填项
+
+如果您的应用已经在App Store或Google Play上线，请直接输入苹果商店应用URL或应用包名，并点击查找。您的应用信息将被自动补全。
+
+![001](adimgscn/0002.png)
+
+如果您的应用没有在以上两个商店上线，请点击“若应用未上线，请点击此处”，手动填写应用信息。
 
 - 应用分类：请准确填写应用所属类别，便于我们对广告投放效果进行优化
 - 应用名称：请填写真实的应用名称，如“消灭星星-Popstar官方正版”
@@ -37,17 +60,52 @@
 - 应用包名：请输入应用主包名，该包名是应用的唯一识别。如“com.zplay.popstar”
 - 下载地址：对于iOS应用请填写规范的iTunes地址，便于可以正常解析出应用下载页面
 
-注：如果您的应用已经上线，可以点击“若应用已上线，点击此处更新应用信息”并输入商店URL。输入后，点击“查找”，您的应用信息将被自动补全。
-
 ![002](adimgscn/002.png)
 
-应用元素及推广素材为选填。您可以上传和自己游戏相关的素材，以便我们更好地为您制作可玩的广告创意。上传素材有两种途径，第一，直接上传，适用于较小的文件。第二，填写网盘地址，适用于文件数量较多，大小较大的情况。您的素材将被上传到应用素材库。（关于素材库，详见步骤2.4）
+（2）应用元素及推广素材，该部分为选填项
+
+您可以上传图片，音频，视频等元素或者素材以便我们更好地为您制作可玩的广告创意。上传素材有两种途径，第一，直接上传，适用于较小的文件（不大于20M）。第二，填写网盘地址，适用于文件数量较多，文件大小较大的情况。您的素材将被上传到应用素材库。（关于素材库，详见[2.3](#23-应用素材库)）
 
 ![003](adimgscn/003.png)
 
-两部分信息填写完成后，选择仅添加，即可上传文件并保存您填写的应用信息。选择添加并创建广告，即可上传文件，保存您填写的应用信息，并进入到创建广告投放页面（创建广告投放详见步骤2.6）。
+两部分信息填写完成后，选择仅添加，即可上传文件并保存您填写的应用信息。选择添加并创建广告，即可上传文件，保存您填写的应用信息，并进入到创建广告投放页面。
 
-##### 2.3 您有两个途径可以进入应用的素材库。
+### 2.2 广告投放
+
+#### 2.2.1 广告投放列表
+
+在应用管理页面，点击应用列表中的应用名称，或点击应用列表右侧的“展开广告列表”，进入广告投放列表页。
+
+![001](adimgscn/0003.png)
+
+在广告投放列表页，可以看到广告的状态，起止日期，投放设置以及结算单价。右侧操作栏可以对广告进行操作。
+
+- 开始/暂停：点击可控制广告的投放状态。投放中的广告，点击暂停，可暂停投放。暂停中的广告，点击开始，可开始投放。
+- 编辑：点击可更新广告投放的设置。
+- 复制：点击可复制该投放。复制后，将快速生成一条与原投放设置完全一致的投放。
+
+![011](adimgscn/011.png)
+
+#### 2.2.2 添加广告
+
+点击广告投放列表页的“添加广告”，或在应用列表页点击应用名称，再点击“添加广告”，即可创建广告投放。
+
+![009](adimgscn/009.png)
+
+![0004](adimgscn/0004.png)
+
+- 结算设置：目前我们只支持CPI的结算方式。使用账户预算时，我们会将您现在的账户余额作为您一天的投放预算。如果不使用账户预算，您也可以自行设置投放预算，投放预算以天为单位。
+- 时间设置：投放结束时间视您需要选择添加。若没有添加结束时间，广告投放在投放预算或账户余额消耗完时停止。
+- 定向设置：您可以根据自己的投放需求设置投放定向。
+- 监测设置：填入监测地址，若您已经对接Appsflyer、adjust、AdMaster、TaklingData、热云、singular、TUNE等三方监测平台，填写在对方平台生成的监测地址，若您未接入以上八家监测平台，您可以通过我们提供的激活回传接口，点击“接入说明”查看如何获取监测地址。
+
+填写完成后，点击“保存”，可添加该广告投放。点击“保存并生成下一条广告”，可添加该广告投放，并新生成一条与该广告投放完全相同的投放。您可以对这条投放进行调整，添加新的广告投放。
+
+![010](adimgscn/010.png)
+
+### 2.3 应用素材库
+
+您有两个途径可以进入应用的素材库。
 
 第一，进入“应用管理”页面，在应用列表右侧找到“素材库”按钮，进入该应用下的素材库。
 
@@ -59,13 +117,13 @@
 
 ![006](adimgscn/006.png)
 
-##### 2.4 素材库页面。
-
 在素材库里，你可以看到已经上传的文件与链接。点击“删除”，可删除这些文件与链接，点击“添加网盘/本地文件”，可添加文件，添加方法同2.2。对文件进行更改后，点击“保存”，保存更改。
 
 ![007](adimgscn/007.png)
 
-##### 2.5 上传应用元素及推广素材后，我们会将这些元素制作成可玩素材。您可以在可玩素材列表页预览这些素材。点击应用管理-应用名称-可玩素材，即可进入可玩素材列表页
+### 2.4 可玩素材列表页
+
+上传应用元素及推广素材后，我们会将这些元素制作成可玩素材。您可以在可玩素材列表页预览这些素材。点击应用管理-应用名称-可玩素材，即可进入可玩素材列表页。
 
 在可玩素材列表页，鼠标悬浮到预览按钮上方，出现二维码。
 - 若您的手机中已经安装ZPLAY Ads预览工具，可扫描右方二维码预览广告。
@@ -73,47 +131,42 @@
 
 ![008](adimgscn/008.png)
 
-##### 2.6 点击左侧“广告投放”标签进入广告投放管理页面，点击“添加广告”为您的应用添加广告投放
+## 3 账户充值
 
-![009](adimgscn/009.png)
-
-##### 2.7 填写相关信息后点击“保存”按钮，跳转至广告投放列表页
-
-- 结算设置：目前我们只支持CPI的结算方式。使用账户预算时，我们会将您现在的账户余额作为您一天的投放预算。如果不使用账户预算，您也可以自行设置投放预算，投放预算以天为单位。
-- 时间设置：投放结束时间视您需要选择添加。若没有添加结束时间，广告投放在投放预算或账户余额消耗完时停止。
-- 定向设置：您可以根据自己的投放需求设置投放定向。
-- 展示监测/监测地址：填入监测地址，若您已经对接Appsflyer、adjust、AdMaster、TaklingData、热云、singular、TUNE等三方监测平台，填写在对方平台生成的监测地址，若您未接入以上八家监测平台，您可以通过我们提供的激活回传接口，点击“接入说明”查看如何获取监测地址。
-
-![010](adimgscn/010.png)
-
-##### 2.8 广告创建完成，在广告投放页查看广告的状态。
-
-![011](adimgscn/011.png)
-
-### 3 账户充值
-
-##### 3.1 点击首页“充值”按钮开始充值
+### 3.1 点击首页“充值”按钮开始充值
 
 ![012](adimgscn/012.png)
 
-##### 3.2 输入充值金额，点击下一步
+### 3.2 输入充值金额，点击下一步
 
 ![013](adimgscn/013.png)
 
-##### 3.3 在线充值目前仅支持微信与支付宝两种，点击保存后扫描二维码支付即可
+### 3.3 在线充值目前仅支持微信与支付宝两种，点击保存后扫描二维码支付即可
 
 ![014](adimgscn/014.png)
 
 注：账户余额不为0时，广告投放才可生效
 
-### 4 数据查询
+## 4 数据查询
 
-进入广告投放报表页查询分应用和分广告投放数据
+点击广告投放报表页，查看广告投放数据。
 
-![015](adimgscn/015.png)
+- 您可以通过上方筛选框查看分应用与分广告的数据。
 
-### 5 财务管理
+![014](adimgscn/0005.png)
 
-进入财务管理页面查看账户消费信息
+- 您可以在下方查看四个维度的广告投放报表。点击列表左侧蓝色文字，可查看该日期/应用/广告/国家下的广告投放数据，同时，上方筛选框会出现您刚选定的筛选条件。如：下方日期选择了“20170801”后，上方自定义日期也会变为“2017年08月01日”。
+
+![015](adimgscn/0006.png)
+
+## 5 财务管理
+
+点击“财务管理”，进入财务管理页面。
+
+- 在“每月消费”栏，您可以看到自己本月之前的消费额。其中，消费金额是我们记录的消费金额，计账金额为核减之后，您实际需要支付的金额。
 
 ![016](adimgscn/016.png)
+
+- 在“充值记录”栏，您可以看到自己的充值记录。
+
+![016](adimgscn/0007.png)
