--- a/系统使用手册.md
+++ b/系统使用手册.md
@@ -1,7 +1,8 @@
 ## 目录
+
 1. [说明](#1-说明)
 
-2. [应用及广告投放](#2-添加应用及广告投放)
+2. [应用及广告投放](#2-应用及广告投放)
 
 3. [账户充值](#3-账户充值)
 
@@ -13,11 +14,11 @@
 
 广告主进入系统后，建议的操作路径为：
 
-第1步: 添加应用（请参考2.1至2.5的介绍）
+第1步: 添加应用（请参考[2.1](#21-应用管理)的介绍）
 
-第2步: 添加广告（请参考2.6至2.8的介绍）
+第2步: 添加广告（请参考[2.2](#22-广告投放)的介绍）
 
-第3步: 充值（请参考3的介绍）
+第3步: 充值（请参考[3](#3-账户充值)的介绍）
 
 提醒：第1步到第2步是有前后顺序的，必须先添加应用，再添加广告。充值可以在此之前或者之后完成。
 
@@ -46,7 +47,7 @@
 
 该页面有两部分，第一部分是应用信息，该部分为必填项。第二部分是应用元素及推广素材，该部分为选填项。
 
-（1）应用信息，该部分未必填项
+（1）应用信息，该部分为必填项
 
 如果您的应用已经在App Store或Google Play上线，请直接输入苹果商店应用URL或应用包名，并点击查找。您的应用信息将被自动补全。
 
@@ -88,7 +89,7 @@
 
 #### 2.2.2 添加广告
 
-点击广告投放列表页的“添加广告”，或在应用列表页点击应用名称，再点击“添加广告”，即可创建广告投放。
+点击应用列表页的“添加广告”，或在应用列表页点击应用名称，再点击“添加广告”，即可创建广告投放。
 
 ![009](adimgscn/009.png)
 
@@ -117,7 +118,7 @@
 
 ![006](adimgscn/006.png)
 
-在素材库里，你可以看到已经上传的文件与链接。点击“删除”，可删除这些文件与链接，点击“添加网盘/本地文件”，可添加文件，添加方法同2.2。对文件进行更改后，点击“保存”，保存更改。
+在素材库里，你可以看到已经上传的文件与链接。点击“删除”，可删除这些文件与链接，点击“添加网盘/本地文件”，可添加文件，添加方法同[2.1.2](#-212-添加应用)。对文件进行更改后，点击“保存”，保存更改。
 
 ![007](adimgscn/007.png)
 
