--- a/Tracking/友盟监测链接获取指南.md
+++ b/Tracking/友盟监测链接获取指南.md
@@ -7,7 +7,7 @@
 #### 3. 根据您的需求，填写推广计划的基本信息
 ![image](imgs/umeng_3_basic_information.png)
 
-#### 4. 在“推广渠道”字段，选择“ZPLAY Ads”，并根据需求填写其他字段
+#### 4. 在“推广渠道”字段，选择“ZPLAY Ads”，并根据需求填写其他字段，然后点击下一步
 ![image](imgs/umeng_4_choose_promoted_channel.png)
 
 #### 5. 填写完成后，点击确认，保存您的设置
