--- a/Tracking/友盟监测链接获取指南.md
+++ b/Tracking/友盟监测链接获取指南.md
@@ -1,29 +1,32 @@
-#### 1. 在应用管理中选择您需要监测的应用
+#### 1. 在“应用管理”中选择您需要监测的应用
 ![image](imgs/umeng_1_choose_app.png)
 
 #### 2. 选择“添加推广计划”
 ![image](imgs/umeng_2_add_promoted_plan.png)
 
-#### 3. 根据您的需求，填写推广计划的基本信息，然后点击下一步
+#### 3. 根据您的需求，填写推广计划的基本信息，然后点击“下一步”
 ![image](imgs/umeng_3_basic_information.png)
 
 #### 4. 在“推广渠道”字段，选择“ZPLAY Ads”，并根据需求填写其他字段
 ![image](imgs/umeng_4_choose_promoted_channel.png)
 
-#### 5. 填写完成后，点击确认，保存您的设置
+#### 5. 填写完成后，点击“确认”，保存您的设置
 ![image](imgs/umeng_5_filling_completed.png)
 
 #### 6. 保存后，在该页面复制生成的点击监测链接和曝光检测代码
 ![image](imgs/umeng_6_copy_link.png)
 
-#### 7. 如果您随后还需要再次查看监测链接信息，可以在应用管理中选择您需要监测的应用后，在下方表格中点击您所创建的计划右侧的“监测”按钮，便可以查看该项推广计划的监测链接
+#### 7. 如果您随后还需要再次查看监测链接信息，可以在“应用管理”中选择您需要监测的应用后，在下方表格中点击您所创建的计划右侧的“监测”按钮，便可以查看该项推广计划的监测链接
 ![image](imgs/umeng_6.2_check_again.png)
 
 #### 8. 点击“渠道管理”中的“渠道管理”
 ![image](imgs/umeng_7_channel_management.png)
 
-#### 9. 在输入框中输入zplay，并将对ZLPAY Ads的开启/关闭数据回传按钮打开，该按钮打开后，ZPLAY Ads才可以收到您应用的激活信息，才可以正确与您结算
+#### 9. 在输入框中输入ZLPAY Ads，并点击对ZLPAY Ads的“开启/关闭数据回传”按钮
 ![image](imgs/umeng_8_choose_zplay.png)
 
-#### 10. 在您创建广告或者编辑广告时将获取到的点击监测链接填写到ZPLAY Ads的监测地址框内，将获取到的曝光监测代码填写到ZPALY Ads的展示监测地址框内
+#### 10. 点击“我同意协议，确定授权”以将数据授权给ZPLAY Ads。授权后，ZPLAY Ads才可以收到您应用的激活信息，才可以正确与您结算
+![image](imgs/umeng_10_agreement.png)
+
+#### 11. 在您创建广告或者编辑广告时将获取到的点击监测链接填写到ZPLAY Ads的监测地址框内，将获取到的曝光监测代码填写到ZPALY Ads的展示监测地址框内
 ![image](imgs/umeng_9_tracking.png)
