--- a/Tracking/友盟监测链接获取指南.md
+++ b/Tracking/友盟监测链接获取指南.md
@@ -1,14 +1,14 @@
 #### 1. 进入“应用管理”页面，在应用列表中找到您需要推广的应用后，点击应用名称进入应用下推广计划列表
 ![image](imgs/umeng_1_choose_app.png)
 
-#### 2. 若您想要创建新的推广计划，在此页面点击“添加推广计划”按钮，进入步骤2.1;
+#### 2. 若您想要创建新的推广计划，在此页面点击“添加推广计划”按钮，进入步骤2.1
 #### 若您想为已有的推广计划添加监测单元，点击此页面中计划名称，进入监测单元列表 进入步骤2.2
 ![image](imgs/umeng_2_add_promoted_plan.png)
 
-##### 2.1 根据您的需求，填写推广计划的基本信息，然后点击“下一步”
+##### 2.1 根据您的需求，填写推广计划的基本信息，然后点击“下一步”并进入步骤3
 ![image](imgs/umeng_3_basic_information.png)
 
-##### 2.2 在监测单元列表页面点击“添加监测单元”创建单个监测单元或点击“批量创建监测单元”创建多个监测单元
+##### 2.2 在监测单元列表页面点击“添加监测单元”创建单个监测单元或点击“批量创建监测单元”创建多个监测单元。随后，进入步骤3
 ![image](imgs/umeng_4_0.png)
 
 #### 3. 在“推广渠道”下拉列表中，选择“ZPLAY Ads”，信息填写完整后点击“确认”按钮保存您的设置
